# language

./: .gitignore  README.md
backend/: CMakeLists.txt  main.cpp  register.h
backend/libraries/: MyTree.cpp  MyTree.h  connect_asm.cpp  connect_asm.h  my_stack.cpp
backend_x86_64/: CMakeLists.txt  main.cpp
backend_x86_64/src/: backend_x86_64.cpp  backend_x86_64.h  bin_commands.h  com_functions.cpp  decl_com_functions.inc  name_table.cpp  name_table.h
backend_x86_64/src/base/: my_tree.cpp  my_tree.h  utilities.cpp  utilities.h
backend_x86_x64/: CMakeLists.txt  main.cpp
backend_x86_x64/libraries/: MyTree.cpp  MyTree.h  NameTable.cpp  NameTable.h  backend_x86_x64.cpp  backend_x86_x64.h  binCommands.h  comFunctions.cpp  declComFunctions.h  declComFunctions.inc
backend_x86_x64/source_add_files/: 3func.bat  3functions.asm  empty.asm  empty.bat
backend_x86_x64/tests/: 3functions.asm  3functions.lst  minimal_pe.cpp  printf_scanf.asm  printf_scanf.lst  study_on_future.cpp  test.asm  test.lst  testxmm.lst
frontend/: CMakeLists.txt  function.cpp  function.h  main.cpp  test.gop
frontend/libraries/: com_language.h  def_com_language.h  func_operators.h  functions.cpp  functions.h  token.cpp  token.h
frontend/libraries/base/: MyTree.cpp  MyTree.h  my_stack.h
frontend_back/: CMakeLists.txt  main.cpp
frontend_back/libraries/: MyTree.cpp  MyTree.h  diffur.h
middle_end/: CMakeLists.txt  main.cpp
middle_end/libraries/: MyTree.cpp  MyTree.h  diffur.h
workspace/compiler/: backend  frontend  makefile  middle_end
workspace/compiler/scripts/: update_exec.sh
workspace/cpu/: Assembler  processor
workspace/logs/: CODE.nasm  back_code.gop  code.n  text_picture.dot  text_picture_utf8.dot  tree.txt  tree.txt-utf8
workspace/programs/: deriv.gop  quad_work.gop
workspace_win64/compiler/: fact.bat  fact_time.bat  gop.bat  gop_test.bat  quad.bat
workspace_win64/compiler/scripts/: update_exes.bat
workspace_win64/logs/: text_picture.dot  tree.txt  tree_quad.txt
workspace_win64/programs/: deriv.txt  fact_time.gop  fact_win1251.gop  quad.gop  quad_win1251.gop  quad_work.gop  test.gop  test_utf-8.gop  test_win1251.gop
